--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 	Description: Customize theme
  ============================= */
 
-* {margin:0; padding:0;} 
-html, body {background:#fdfdfb; margin:0; padding:0; width:100%;} 
+* {margin:0; padding:0;}
+html, body {background:#fdfdfb; margin:0; padding:0; height:100%; width:100%;} 
 ul {list-style:none; margin:0; padding:0;}
 
 
@@ -39,12 +39,14 @@ ul {list-style:none; margin:0; padding:0;}
  ============== */
 #main-container {height:100%; min-height:100%; height: auto !important;}
 
-.login-status-wrapper {background:#678222; height:20px;}
+#main-wrapper {padding-bottom:147px;}
+
+.login-status-wrapper {background:#678222; margin-bottom:1px; height:20px;}
 .login-status {color:#bbfb04; text-align:right;}
 .login-status a {color:#bbfb04;}
 .logo-nav {margin: 0 auto; width:1024px;}
 
-nav {margin-top:30px;}
+nav {margin:30px 0 2px;}
 nav ul li {float:left; color:#050505; padding:32px 10px 0;}
 
 nav ul li:nth-child(1) {background:url('../images/page_template/menu_lift.jpg') no-repeat top center;}
@@ -58,6 +60,7 @@ nav ul li a {color:#050505; font-family: 'quicksandregular'; font-weight:bold; f
 
 .line-separator {border-top:2px solid #c2c2c1; width:1024px;}
 
+footer {margin-top:-147px;}
 footer .pull-left {text-transform:uppercase; margin-bottom:25px;}
 footer .pull-left .fl {margin-right:20px;}
 footer .pull-left a {color:#050505; font-size:.9em;}
@@ -77,6 +80,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 /* ================
 	Helper Classes
  =============== */
+.error {color:#ff0000;}
 .bd {border:1px solid #000;}
 .hidden 				{display: none !important; visibility: hidden; } /* Hide from both screenreaders and browsers */
 .clr 				{float:none; clear: both; }
@@ -104,9 +108,6 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .center				{display:table-cell; vertical-align:middle; text-align:center}
 .overflow-hidden 	{overflow:hidden;}
 .m-center 			{margin:0 auto; width:1024px;}
-
-
-
 
 /* ===================
 	Template Layout
@@ -137,6 +138,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .slideshow ul li img { display: block; height: 100%; float: left; width: 100%; border: 0; }
 
 .welcome {margin-left:0; width:300px;}
+.welcome p {font-size:.9em; margin-bottom:20px;}
 .welcome a {display:block; font-size:1.3em; text-align:center; width:132px;}
 
 .carousel {margin-top:17px; width:570px;}
@@ -152,6 +154,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .events-quote .pagination {margin:0 20px 0;}
 
 .event-detail {position:absolute; color:#fff; top:0; left:0; width:100%;}
+.event-detail p {margin-left:5px;}
 
 .quote {text-align:center; margin-top:12px;}
 .quote .fl {margin-left:10px;}
@@ -159,6 +162,23 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .quote .q-right {vertical-align:top; margin-top:25px;}
 .q-message p {position:relative; background: #e6e6e6; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:5px 10px; width:450px;}
 .q-message img {position:absolute; bottom:-9px; left:5px;}
+
+.login-form {margin:0 auto; width:262px;}
+.login-form .username {display:block; background:url('../images/input_login.jpg') no-repeat; margin-bottom:15px; width:261px; height:37px;}
+.login-form .username input {border:none; background:none; margin-left:42px; padding-top:10px; width:200px;}
+.login-form .password {display:block; background:url('../images/input_password.jpg') no-repeat; width:261px; height:37px;}
+.login-form .password input {border:none; background:none; margin-left:42px; padding-top:10px; width:200px;}
+
+/*.forgot-form {margin:0 auto; width:312px;}*/
+.forgot-form {margin-top:20px;}
+.forgot-form input[type="text"] {border:1px solid #bebdbd; width:261px; height:27px;}
+
+.register form {margin-left:84px; padding-top:20px;}
+.register form ul li:nth-child(7) input {float:left; margin-right:5px;}
+.register div label, .register div input {float:left; margin-right:5px;}
+.register form ul li input[type="text"], .register form ul li input[type="password"] {border:1px solid #bebdbd; box-shadow: inset 0 2px 10px #e7e7e5; -webkit-box-shadow: inset 0 2px 10px #e7e7e5; -moz-box-shadow: inset 0 2px 10px #e7e7e5; width:250px;}
+
+#successful-message {border:3px solid #27f82a; text-align:center; margin-top:30px; padding:10px 0;}
 
 
 
@@ -224,5 +244,4 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	.slideshow ul {height:160px;}
 	
 	.welcome h2 {font-size:1.8em;}
-	.welcome p {font-size:.9em; margin-bottom:20px;}
 }
