--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -221,6 +221,7 @@ textarea {
   }
 }
 
+/*
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -229,6 +230,7 @@ body {
   color: #333333;
   background-color: #ffffff;
 }
+*/
 
 a {
   color: #0088cc;
@@ -796,9 +798,7 @@ ol ul {
   margin-bottom: 0;
 }
 
-li {
-  line-height: 20px;
-}
+/*li { line-height: 20px; }*/
 
 ul.unstyled,
 ol.unstyled {
@@ -1032,7 +1032,7 @@ select,
 textarea {
   font-size: 14px;
   font-weight: normal;
-  line-height: 20px;
+  /*line-height: 20px;*/
 }
 
 input,
@@ -1042,10 +1042,7 @@ textarea {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-label {
-  display: block;
-  margin-bottom: 5px;
-}
+label { display: block; /*margin-bottom: 5px;*/ }
 
 select,
 textarea,
