--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -141,7 +141,7 @@ input[type="submit"] {
   -webkit-appearance: button;
 }
 
-label,
+/*label,*/
 select,
 button,
 input[type="button"],
@@ -5174,7 +5174,7 @@ input[type="submit"].btn.btn-mini {
   z-index: 1050;
   width: 560px;
   margin-left: -280px;
-  background-color: #ffffff;
+  background-color: #fdf9f9;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
   *border: 1px solid #999;
@@ -5231,7 +5231,7 @@ input[type="submit"].btn.btn-mini {
   padding: 14px 15px 15px;
   margin-bottom: 0;
   text-align: right;
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
   border-top: 1px solid #ddd;
   -webkit-border-radius: 0 0 6px 6px;
      -moz-border-radius: 0 0 6px 6px;
