--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,6 +229,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	-moz-opacity: 0;
 }
 
+.lift-detail-view {margin-top:20px;}
 .lift-detail-view .fl h4 span, .lift-detail-view .fl h5 span {color:#678222;}
 
 .lift-details ul {list-style:none;}
@@ -245,6 +246,13 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .lift-information ul li {margin-bottom:10px;}
 .lift-information ul li label, .lift-information ul li span {float:left;}
 .lift-information ul li label {width:110px;}
+
+.lift-seat-available p {text-align:center; margin-bottom:15px;}
+.lift-seat-available ul li {float:left; margin-left:7px;}
+
+.lift-price {text-align:right; font-size:2em; margin:20px 0;}
+
+.btn-book-now {text-align:right; margin-top:10px;}
 
 
 .quick-book-popup {display:none;}
