--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1112,7 +1112,7 @@ input[type="color"],
 }
 
 textarea:focus,
-input[type="text"]:focus,
+/*input[type="text"]:focus,*/
 input[type="password"]:focus,
 input[type="datetime"]:focus,
 input[type="datetime-local"]:focus,
@@ -1581,14 +1581,14 @@ input[type="checkbox"][readonly] {
   border-color: #3a87ad;
 }
 
-input:focus:invalid,
+/*input:focus:invalid,*/
 textarea:focus:invalid,
 select:focus:invalid {
   color: #b94a48;
   border-color: #ee5f5b;
 }
 
-input:focus:invalid:focus,
+/*input:focus:invalid:focus,*/
 textarea:focus:invalid:focus,
 select:focus:invalid:focus {
   border-color: #e9322d;
