--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,21 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .slideshow ul li:first-child { position: relative; display: block; float: left; }
 .slideshow ul li img { display: block; height: 100%; float: left; width: 100%; border: 0; }
 
+.search-home {background:url('../images/page_template/search_bg.png') repeat; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:10px 10px 0; width:678px;}
+.search-home ul, .search ul {list-style:none;}
+.search-home ul li {float:left;}
+.search-home ul li label, .search-home ul li input, .search ul li label, .search ul li input {float:left;}
+.search-home form ul li input[type="text"] {border:1px solid #bebdbd; border-shadow: 0 0 5px #000; box-shadow: inset 0 3px 10px #e7e7e5; margin-right:8px; width:195px; height:20px;}
+.search-home form ul li #datepicker {width:137px;}
+
+.ui-autocomplete { font-size: .9em; max-height: 100px; overflow-y: auto; overflow-x: hidden; }
+
+.search {margin:0 auto; width:706px;}
+.search form ul {text-align:center;}
+.search form ul li {float:left;}
+.search form ul li input[type="text"] {border:1px solid #bebdbd; border-shadow: 0 0 5px #000; box-shadow: inset 0 3px 10px #e7e7e5; margin: 10px 8px 0 0; width:237px; height:20px;}
+.search form ul li input[type="submit"] {margin-top:10px;}
+
 .welcome {margin-left:0; width:300px;}
 .welcome p {font-size:.9em; margin-bottom:20px;}
 .welcome a {display:block; font-size:1.3em; text-align:center; width:132px;}
@@ -184,6 +199,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 #successful-message {border:3px solid #27f82a; text-align:center; margin-top:30px; padding:10px 0;}
 
+
+/***** [Lift View] *****/
 .lift-text {text-transform:uppercase; margin-bottom:18px;}
 .lift-view ul, .lift-listing ul {list-style:none; overflow: hidden;}
 .lift-search ul li {float:left;}
@@ -254,34 +271,25 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 .btn-book-now {text-align:right; margin-top:10px;}
 
+/***** [Passenger] *****/
+.passenger-search form ul {text-align:center;}
+.passenger-search form ul li {float:none; display:inline-block; margin-left:18px;}
+.passenger-search form ul li:first-child {margin-left:0;}
+.passenger-search form ul li span {display:block; background:#fff; border:1px solid #bfbfbe; box-shadow: inset 0px 3px 10px #dbdbda; margin-top:18px; padding-top:3px; width:237px; height:32px; }
+.passenger-search form ul li span input {background:none !important; border:none !important; margin-left:10px;}
+.passenger-search form ul li span input:focus {outline: none !important;}
+.passenger-search form ul li input[type="submit"] {margin-top:-5px;}
 
-.quick-book-popup {display:none;}
+.passenger-view ul {list-style:none;}
+.passenger-view ul li {float:left;}
 
-.popup-overlay {display:none; background:url('../images/overlay.png') repeat; position:absolute; top:0; left:0; width:100%; height:100%;}
-.popup-wrapper {position:relative;}
-.quick-book-popup {background:#fff; position:absolute; left:50%; margin-left:-250px; padding:20px; width:500px;}
-
-.quick-book {background: url('../images/page_template/quick_book_bg.png') no-repeat; color:#fff !important; font-weight:bold; text-align:right; padding:3px 10px 0 0; width:110px; height:18px;}
-.quick-book-popup ul {list-style:none;}
-.quick-book-popup ul li {margin-bottom:10px;}
-
-.success-overlay {display:none; background:url('../images/overlay.png') repeat; position:absolute; top:0; left:0; width:100%; height:100%;}
-.booking-success-popup {background:#fff; position:absolute; text-align:center; left:50%; margin-top:10%; margin-left:-250px; padding:20px; width:500px;}
-
-.search-home {background:url('../images/page_template/search_bg.png') repeat; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:10px 10px 0; width:678px;}
-.search-home ul, .search ul {list-style:none;}
-.search-home ul li {float:left;}
-.search-home ul li label, .search-home ul li input, .search ul li label, .search ul li input {float:left;}
-.search-home form ul li input[type="text"] {border:1px solid #bebdbd; border-shadow: 0 0 5px #000; box-shadow: inset 0 3px 10px #e7e7e5; margin-right:8px; width:195px; height:20px;}
-.search-home form ul li #datepicker {width:137px;}
-
-.ui-autocomplete { font-size: .9em; max-height: 100px; overflow-y: auto; overflow-x: hidden; }
-
-.search {margin:0 auto; width:706px;}
-.search form ul {text-align:center;}
-.search form ul li {float:left;}
-.search form ul li input[type="text"] {border:1px solid #bebdbd; border-shadow: 0 0 5px #000; box-shadow: inset 0 3px 10px #e7e7e5; margin: 10px 8px 0 0; width:237px; height:20px;}
-.search form ul li input[type="submit"] {margin-top:10px;}
+.passenger-listing {margin-top:20px;}
+.passenger-listing ul {width:850px}
+.passenger-listing ul li {background:#f0efee; text-align:center; margin: 0 47px 30px 0; padding:10px; width:200px;}
+.passenger-listing ul li:nth-child(3n+3) { margin-right: 0;}
+.passenger-listing ul li a {color:#000;}
+.passenger-listing ul li span {display:block; text-align:left; color:#678222; padding:4px 0;}
+.passenger-listing ul li span strong {color:#000;}
 
 
 
