--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .lift-listing ul li a {color:#000;}
 .lift-listing ul li a:hover {text-decoration:none;}
 
+.quick-book {background: url('../images/page_template/quick_book_bg.png') no-repeat; color:#fff !important; font-weight:bold; text-align:right; padding:3px 10px 0 0; width:110px; height:18px;}
+
 #quick_booking ul li {margin-bottom:15px;}
 #quick_booking ul li div {position:relative;}
 #quick_booking ul li div.seat-taken label:first-child {margin-left:0;}
@@ -246,8 +248,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	-moz-opacity: 0;
 }
 
-.lift-detail-view {margin-top:20px;}
-.lift-detail-view .fl h4 span, .lift-detail-view .fl h5 span {color:#678222;}
+.detail {margin-top:20px;}
+.detail .fl h4 span, .detail .fl h5 span {color:#678222;}
 
 .lift-details ul {list-style:none;}
 .lift-details ul li {float:left; text-align:center;}
@@ -288,8 +290,19 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .passenger-listing ul li {background:#f0efee; text-align:center; margin: 0 47px 30px 0; padding:10px; width:200px;}
 .passenger-listing ul li:nth-child(3n+3) { margin-right: 0;}
 .passenger-listing ul li a {color:#000;}
+.passenger-listing ul li a:hover {text-decoration:none;}
 .passenger-listing ul li span {display:block; text-align:left; color:#678222; padding:4px 0;}
 .passenger-listing ul li span strong {color:#000;}
+
+.user-send-message {margin-top:20px;}
+.select-width-auto {width:auto !important;}
+
+#passenger-calendar .pcal-header {border:1px solid #c9c8c8; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:8px; width:268px;}
+#passenger-calendar .pcal-header .prev {display:block; background:url('../images/page_template/cal_nav.png') no-repeat 0 0; width:19px; height:19px;}
+#passenger-calendar .pcal-header .next {display:block; background:url('../images/page_template/cal_nav.png') no-repeat -19px 0; width:19px; height:19px;}
+#passenger-calendar .pcal-header .pcal-month {text-align:center; font-size:1.4em; width:213px;}
+#passenger-calendar .pcal-body ul li {padding:5px;}
+#passenger-calendar .pcal-body ul li:nth-child(odd) {background:#f5f5f5;}
 
 
 
