Added about us pages and fixed aesthetics in contact view layout

--- a/assets/css/bootstrap-responsive.css
+++ b/assets/css/bootstrap-responsive.css
@@ -122,11 +122,11 @@
   .row:after {
     clear: both;
   }
-  [class*="span"] {
+  /*[class*="span"] {
     float: left;
     min-height: 1px;
     margin-left: 30px;
-  }
+  }*/
   .container,
   .navbar-static-top .container,
   .navbar-fixed-top .container,
