--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -281,11 +281,13 @@ a:focus {
   clear: both;
 }
 
+/*
 [class*="span"] {
   float: left;
   min-height: 1px;
   margin-left: 20px;
 }
+*/
 
 .container,
 .navbar-static-top .container,
