--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .center				{display:table-cell; vertical-align:middle; text-align:center}
 .overflow-hidden 	{overflow:hidden;}
 .m-center 			{margin:0 auto; width:1024px;}
+.m-center-content 	{margin:20px auto; width:1024px;}
 
 /* ===================
 	Template Layout
@@ -163,7 +164,6 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .carousel .span2 {position:relative; float:left; margin-left:20px;}
 .carousel-inner .span2 {width:170px;}
 
-
 .carousel-linked-nav {float:right;}
 .carousel-linked-nav li {float:left; background:url('../images/events/bullet_nav.jpg') no-repeat; margin-left:5px; width:13px; height:13px;}
 .carousel-linked-nav li.active {background:url('../images/events/bullet_nav.jpg') no-repeat 0 -13px;}
@@ -171,7 +171,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 .events-quote .pagination {margin:0 20px 0;}
 
-.event-detail {position:absolute; color:#fff; top:0; left:0; width:100%;}
+.event-detail {position:absolute; color:#fff; top:5px; left:5px; width:100%;}
 .event-detail p {margin-left:5px;}
 
 .quote {text-align:center; margin:12px 0 20px;}
@@ -181,6 +181,20 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .quote .q-right {vertical-align:top; margin-top:25px;}
 .q-message p {position:relative; background: #e6e6e6; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:5px 10px; width:450px;}
 .q-message img {position:absolute; bottom:-9px; left:5px;}
+
+.about .fl h1 {font-family: 'quicksandregular';}
+.about .fl p {font-family: 'quicksandregular'; font-size:1.2em; line-height:20px; margin:10px 0;}
+.about .fr ul li {cursor:pointer;}
+.about .fr ul li div {display:none;}
+
+.about .fr ul li:first-child {background:url('../images/about_image.png') no-repeat 0 0; width:144px; height:144px;}
+.about .fr ul li:first-child div {background:url('../images/about_image.png') no-repeat 0 -144px; width:144px; height:144px;}
+
+.about .fr ul li:nth-child(2) {background:url('../images/about_image2.png') no-repeat 0 0; margin:-51px 0 0 117px; width:144px; height:144px;}
+.about .fr ul li:nth-child(2) div {background:url('../images/about_image2.png') no-repeat 0 -144px; width:144px; height:144px;}
+
+.about .fr ul li:nth-child(3) {background:url('../images/about_image3.png') no-repeat 0 0; margin:-51px 0 0 235px; width:144px; height:144px;}
+.about .fr ul li:nth-child(3) div {background:url('../images/about_image3.png') no-repeat 0 -144px; width:144px; height:144px;}
 
 .login-form {margin:0 auto; width:262px;}
 .login-form .username {display:block; background:url('../images/input_login.jpg') no-repeat; margin-bottom:15px; width:261px; height:37px;}
@@ -193,6 +207,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .forgot-form input[type="text"] {border:1px solid #bebdbd; width:261px; height:27px;}
 
 .register form {margin-left:84px; padding-top:20px;}
+.register form ul li {margin-bottom:10px;}
+.register form ul li label {margin-bottom:5px;}
 .register form ul li:nth-child(7) input {float:left; margin-right:5px;}
 .register div label, .register div input {float:left; margin-right:5px;}
 .register form ul li input[type="text"], .register form ul li input[type="password"] {border:1px solid #bebdbd; box-shadow: inset 0 2px 10px #e7e7e5; -webkit-box-shadow: inset 0 2px 10px #e7e7e5; -moz-box-shadow: inset 0 2px 10px #e7e7e5; width:250px;}
@@ -304,6 +320,11 @@ footer .pull-right .fl span:last-child {color:#678222;}
 #passenger-calendar .pcal-body ul li {padding:5px;}
 #passenger-calendar .pcal-body ul li:nth-child(odd) {background:#f5f5f5;}
 
+.contact ul {list-style:none;}
+.contact ul li {margin-bottom:10px;}
+.contact ul li label, .contact ul li input, .contact ul li textarea {float:left;}
+.contact ul li label {width:100px;}
+
 
 
 
@@ -313,7 +334,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 @media (max-width: 1024px) {
 	/* .login-status, .logo-nav, .line-separator {width:100%;} */
 	.line-separator {width:100%;}
-	.m-center {width:100%;}
+	.m-center, .m-center-content {width:100%;}
 }
 
 @media (max-width: 920px) {
@@ -331,6 +352,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	.carousel-linked-nav li {float:none; clear:both; display:inline-block;}
 	
 	.quote div {float:none; clear:both; display:inline-block;}
+	
+	.about .fr ul li:nth-child(2), .about .fr ul li:nth-child(3) {margin:40px 0 0;}
 }
 
 @media (max-width: 854px) {
@@ -345,6 +368,10 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 @media (max-width: 720px) {
 	nav {display:none;} 
+	
+	.about .fr ul {text-align:center;}
+	.about .fr ul li:nth-child(2), .about .fr ul li:nth-child(3) {margin:0 0 0 10px;}
+	.about .fr ul li {display:inline-block;}
 }
 
 @media (max-width: 640px) {
