--- a/assets/css/jquery-ui.css
+++ b/assets/css/jquery-ui.css
@@ -824,6 +824,7 @@ body .ui-tooltip {
 	background: #e6e6e6 url(images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x;
 	font-weight: normal;
 	color: #555555;
+	width:100%; /*Added*/
 }
 .ui-state-default a,
 .ui-state-default a:link,
